syntax = "proto3";

package protos.participants;

message ParticipantData {
    uint32 m_aiControlled = 1; // Whether the vehicle is AI (1) or Human (0) controlled
    uint32 m_driverId = 2;     // Driver id - see appendix, 255 if network human
    uint32 m_networkId = 3;    // Network id – unique identifier for network players
    uint32 m_teamId = 4;       // Team id - see appendix
    uint32 m_myTeam = 5;       // My team flag – 1 = My Team, 0 = otherwise
    uint32 m_raceNumber = 6;   // Race number of the car
    uint32 m_nationality = 7;  // ParticipantNationality // Nationality of the driver
    string m_name = 8;         // Name of participant in UTF-8 format – null terminated, Will be truncated with … (U+2026) if too long
    uint32 m_yourTelemetry = 9; // The player's UDP setting, 0 = restricted, 1 = public
    uint32 m_showOnlineNames = 10; // The player's show online names setting, 0 = off, 1 = on
    uint32 m_platform = 11;      // 1 = Steam, 3 = PlayStation, 4 = Xbox, 6 = Origin, 255 = unknown
}

message PacketParticipantsData {
    uint32 m_numActiveCars = 1;
    repeated ParticipantData m_participants = 2;
}